GPv3: Crash when converting a file that has annotations #120287

Closed
opened 2024-04-05 10:39:04 +02:00 by Falk David · 1 comment
Member

System Information
Operating system: Linux-6.5.0-10027-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.2.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Using the Grease Pencil 3.0 Automatic Conversion experimental option will crash Blender if a file is opended that uses annotations.

Exact steps for others to reproduce the error

  1. Open Blender and draw some annotations in the viewport (by holding down D and using the LMB)
  2. Save the file.
  3. Enable the Grease Pencil 3.0 Automatic Conversion experimental option.
  4. Open the saved file.
**System Information** Operating system: Linux-6.5.0-10027-tuxedo-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.2.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Using the `Grease Pencil 3.0 Automatic Conversion` experimental option will crash Blender if a file is opended that uses annotations. **Exact steps for others to reproduce the error** 1. Open Blender and draw some annotations in the viewport (by holding down `D` and using the `LMB`) 2. Save the file. 3. Enable the `Grease Pencil 3.0 Automatic Conversion` experimental option. 4. Open the saved file.
Falk David added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2024-04-05 10:39:05 +02:00
Falk David added this to the Grease Pencil project 2024-04-05 10:39:08 +02:00
Bastien Montagne was assigned by Falk David 2024-04-05 10:39:27 +02:00
Author
Member

@mont29 I think I understand what the issue is. The greasepencil::convert::legacy_main basically didn't account for bGPdata that is not owned by an object. E.g. a bGPdata that is used by a Scene is an annotation data-block and should be skipped during conversion.
I'll see if I can come up with a (quick) solution, otherwise I'll leave it to you :)

@mont29 I think I understand what the issue is. The `greasepencil::convert::legacy_main` basically didn't account for `bGPdata` that is not owned by an object. E.g. a `bGPdata` that is used by a `Scene` is an annotation data-block and should be skipped during conversion. I'll see if I can come up with a (quick) solution, otherwise I'll leave it to you :)
Falk David added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-04-05 12:21:31 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-13 15:45:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120287
No description provided.